--- a/pylistener/pylistener/templates/manage.jinja2
+++ b/pylistener/pylistener/templates/manage.jinja2
@@ -1,14 +1,17 @@
 {% extends 'layout.jinja2' %}
 {% block body %}
-<form id="contact" method="post" accept-charset="utf-8"
+<form id="address_book" method="post" accept-charset="utf-8"
       enctype="multipart/form-data">
     <input type="hidden" name="csrf_token" value="{{ request.session.get_csrf_token() }}">
 
     <label for="img">Image</label>
-    <input id="img" name="img" type="file" />
-    <label for="img_name">name</label>
-    <input id="img_name" name="img_name" type="text" />
-
+    <input id="contact_picture" name="contact_picture" type="file" />
+    <label for="contact_name">Name</label>
+    <input id="contact_name" name="contact_name" type="text" />
+    <label for="contact_phone">Phone</label>
+    <input id="contact_phone" name="contact_phone" type="text" />
+    <label for="contact_email">Email</label>
+    <input id="contact_email" name="contact_email" type="text" />
     <input type="submit" value="submit" />
 </form>
 
@@ -18,8 +21,10 @@
 
     <label for="cat_img">Attribute Image</label>
     <input id="cat_img" name="cat_img" type="file" />
-    <label for="cat_img_name">name</label>
-    <input id="cat_img_name" name="cat_img_name" type="text" />
+    <label for="cat_label">Name</label>
+    <input id="cat_lab" name="cat_label" type="text" />
+    <label for="cat_desc">Description</label>
+    <input id="cat_desc" name="cat_desc" type="text" />
 
     <input type="submit" value="submit" />
 </form>
@@ -30,8 +35,13 @@
 
     <label for="attr_img">Attribute Image</label>
     <input id="attr_img" name="attr_img" type="file" />
-    <label for="attr_img_name">name</label>
+    <label for="attr_name">name</label>
     <input id="attr_img_name" name="attr_img_name" type="text" />
+    <select id="attr_cat">
+        {% for category in categories %}
+        <option value="{{category}}">{{category}}</option>
+        {% endfor %}
+    </select>
 
     <input type="submit" value="submit" />
 </form>
