--- a/pylistener/pylistener/templates/manage.jinja2
+++ b/pylistener/pylistener/templates/manage.jinja2
@@ -1,5 +1,5 @@
 {% extends 'layout.jinja2' %}
-{% block body %}
+{% block content %}
 <form id="address_book" method="post" accept-charset="utf-8"
       enctype="multipart/form-data">
     <input type="hidden" name="csrf_token" value="{{ request.session.get_csrf_token() }}">
@@ -12,7 +12,7 @@
     <input name="contact_phone" type="text" >
     <label for="contact_email">Email</label>
     <input name="contact_email" type="text" >
-    <input type="submit" value="contact" >
+    <input type="submit" value="Add Contact" name="contact">
 </form>
 
 <form id="category" method="post" accept-charset="utf-8"
@@ -26,7 +26,7 @@
     <label for="cat_desc">Description</label>
     <input name="cat_desc" type="text" required>
 
-    <input type="submit" value="category">
+    <input type="submit" value="Add Category" name="category">
 </form>
 
 <form id="attribute" method="post" accept-charset="utf-8"
@@ -45,7 +45,7 @@
     <label for="attr_desc"></label>
     <input name="attr_desc" type="text">
 
-    <input type="submit" value="attribute">
+    <input type="submit" value="Add Attribute" name="attribute">
 </form>
 
-{% endblock %}
+{% endblock content %}
