initial CSS stylings set, in progress

--- a/pylistener/static/reset.css
+++ b/pylistener/static/reset.css
@@ -19,12 +19,11 @@ time, mark, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
-    font-size: 100%;
     font: inherit;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
+footer, header, hgroup, menu, nav, section, form, input {
     display: block;
 }
 body {
