--- a/pylistener/templates/attributes.jinja2
+++ b/pylistener/templates/attributes.jinja2
@@ -3,12 +3,10 @@
 {% if request.authenticated_userid %}
     <ul>
         {% for attribute in attributes %}
-        <li>
-            <a href="{{request.route_url('display', add_id=addr_id, cat_id=category_id, att_id=attribute.id) }}">
+        <li class="list_item">
+            <a class="link_item" href="{{request.route_url('display', add_id=addr_id, cat_id=category_id, att_id=attribute.id) }}">
                 <img src="{{ request.route_url('picture', db_id='att', pic_id=attribute.id) }}">
                 <p>{{ attribute.label }}</p>
-
-                <hr>
             </a>
         </li>
         {% endfor %}
