--- a/pylistener/static/module.css
+++ b/pylistener/static/module.css
@@ -6,10 +6,17 @@ nav {
     width: 100%;
     height: 80px;
     margin-bottom: 20px;
+    display: inline-block;
+}
+
+nav ul li {
+    padding-left: 25px;
+    padding-top: 40%;
 }
 
 .manage_icon {
     float: right;
+    padding-right: 25px;
 }
 
 .list_item {
