--- a/pylistener/static/module.css
+++ b/pylistener/static/module.css
@@ -65,3 +65,48 @@ nav ul li {
 .link_item {
     display: inline-block;
 }
+
+
+h2 {
+  text-align: center;
+}
+
+.manage_form {
+  background: -webkit-linear-gradient(bottom, #97D0A7, #FFFFFF 500px);
+  background: -moz-linear-gradient(bottom, #97D0A7, #FFFFFF 500px);
+  background: linear-gradient(bottom, #97D0A7, #FFFFFF 500px);
+  margin: auto;
+  position: relative;
+  width: 550px;
+  height: 450px;
+  font-size: 14px;
+  line-height: 24px;
+  color: #009999;
+  text-decoration: none;
+  border-radius: 10px;
+  padding: 10px;
+  border: 1px solid #999;
+  border: inset 1px solid #333;
+  -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+}
+
+.manage_form input {
+    width: 75%;
+}
+.manage_button {
+  background-color: #fff;
+  width: 375px;
+  display: block;
+  border: 1px solid #999;
+  height: 25px;
+  -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+}
+
+.manage_button:hover {
+  background: #009999;
+  color: #fff;
+}
