--- a/pylistener/static/module.css
+++ b/pylistener/static/module.css
@@ -71,25 +71,36 @@ h2 {
   text-align: center;
 }
 
+.display_main {
+    text-align: center;
+}
+
+.display_main form {
+    text-decoration: none; 
+    font: menu; 
+    display: inline-block; 
+    padding: 2px 8px;
+    }
+}
 .manage_form {
-  background: -webkit-linear-gradient(bottom, #97D0A7, #FFFFFF 500px);
-  background: -moz-linear-gradient(bottom, #97D0A7, #FFFFFF 500px);
-  background: linear-gradient(bottom, #97D0A7, #FFFFFF 500px);
-  margin: auto;
-  position: relative;
-  width: 550px;
-  height: 450px;
-  font-size: 14px;
-  line-height: 24px;
-  color: #009999;
-  text-decoration: none;
-  border-radius: 10px;
-  padding: 10px;
-  border: 1px solid #999;
-  border: inset 1px solid #333;
-  -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+    background: -webkit-linear-gradient(bottom, #97D0A7, #FFFFFF 500px);
+    background: -moz-linear-gradient(bottom, #97D0A7, #FFFFFF 500px);
+    background: linear-gradient(bottom, #97D0A7, #FFFFFF 500px);
+    margin: auto;
+    position: relative;
+    width: 550px;
+    height: 450px;
+    font-size: 14px;
+    line-height: 24px;
+    color: #009999;
+    text-decoration: none;
+    border-radius: 10px;
+    padding: 10px;
+    border: 1px solid #999;
+    border: inset 1px solid #333;
+    -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
 }
 
 .manage_form input {
