Added functionality to delete contacts and attributes.  Need to troubleshoot deleting attributes.

--- a/pylistener/templates/layout.jinja2
+++ b/pylistener/templates/layout.jinja2
@@ -37,8 +37,8 @@
     </nav>
     {% block content %}
     {% endblock content %}
-
     <script src="https://use.fontawesome.com/927692b4ce.js"></script>
     <script src="//oss.maxcdn.com/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="{{request.static_url('pylistener:static/delete.js')}}"></script>
   </body>
 </html>
