--- a/pylistener/templates/register.jinja2
+++ b/pylistener/templates/register.jinja2
@@ -1,11 +1,26 @@
 {% extends 'layout.jinja2' %}
 {% block content %}
-<form method="POST">
+{% if request.session.peek_flash() %}
+        <div class="flashes">
+        {% for message in request.session.pop_flash()%}
+            {{ message }}
+        {% endfor %}
+</div>
+{% endif %}
+
+<form method="POST" enctype="multipart/form-data">
     <input type="hidden" name="csrf_token" value="{{ request.session.get_csrf_token() }}">
     <label>Guardian's Name:</label>
-    <input type="text" name="username">
+    <input type="text" name="contact_name">
     <label>Password:</label>
     <input type="password" name="password">
+    <label for="contact_phone">Phone</label>
+    <input name="contact_phone" type="text" >
+    <label for="contact_email">Email</label>
+    <input name="contact_email" type="text" >
+    <label for="contact_img">Upload Picture:</label>
+     <input name="contact_img" type="file" required>
+
     <label>User's Name:</label>
     <input type="text" name="sub_user">
     <button type="submit">Register</button>
