--- a/pylistener/templates/register.jinja2
+++ b/pylistener/templates/register.jinja2
@@ -8,7 +8,7 @@
 </div>
 {% endif %}
 
-<form method="POST" enctype="multipart/form-data">
+<form class="manage_form" method="POST" enctype="multipart/form-data">
     <input type="hidden" name="csrf_token" value="{{ request.session.get_csrf_token() }}">
     <label>Guardian's Name:</label>
     <input type="text" name="contact_name">
@@ -18,11 +18,12 @@
     <input name="contact_phone" type="text" >
     <label for="contact_email">Email</label>
     <input name="contact_email" type="text" >
+    <br>
     <label for="contact_img">Upload Picture:</label>
-     <input name="contact_img" type="file" required>
-
+    <input name="contact_img" type="file" required>
     <label>User's Name:</label>
     <input type="text" name="sub_user">
-    <button type="submit">Register</button>
+    <br>
+    <button class="manage_button" type="submit">Register</button>
 </form>
 {% endblock content%}
