display css: buttons styling and refresh button added

--- a/pylistener/static/module.css
+++ b/pylistener/static/module.css
@@ -106,19 +106,37 @@ h2 {
   border: 1px solid #777777;
   background: #009999;
   color: white;
-  font: bold 20px;
+  font: bold;
   font-family: 'Ramabhadra', sans-serif;
-  padding: 2%;
-  width: 100px;
-  margin: 4em;
+  padding: .5e 2em .5em 2em;
+  margin: 2em 4em 2em 4em;
+  width: 200px;
+  font-size: 25px;
   cursor: pointer;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
+  -moz-border-radius: 15px;
+  -webkit-border-radius: 15px;
 }
 
 .display_main i {
+    display: block;
     font-size: 50px;
 }
+
+.display_main a {
+    color: #009999;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.display_main a:visited {
+    color: #009999;
+    text-decoration: none;
+}
+
+.display_refresh i {
+    font-size: 100px;
+}
+
 
 .manage_form {
     background: -webkit-linear-gradient(bottom, #97D0A7, #FFFFFF 500px);
