Fixed login form button.

--- a/pylistener/templates/categories.jinja2
+++ b/pylistener/templates/categories.jinja2
@@ -12,6 +12,7 @@
             </ul>
         </div>
         <hr>
+        <h1>What are you talking about?</h1>
         {% for category in categories %}
         <li class="list_item">
             <a class="link_item" href="{{ request.route_url('attribute', add_id=addr_id, cat_id=category.id) }}">
