--- a/pylistener/static/module.css
+++ b/pylistener/static/module.css
@@ -208,6 +208,7 @@ h1.manageTitle {
   -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+  margin: auto;
 }
 
 .manage_button:hover {
