style on forms: submit are input, now centered, restyled. Forms are now 100% height as well.

--- a/pylistener/templates/login.jinja2
+++ b/pylistener/templates/login.jinja2
@@ -7,6 +7,7 @@
       <label for="password">Password: </label>
       <input type="password" name="password" required>
       <br>
-      <button class="manage_button" type="submit">Log In</button>
+      <input class="manage_button" type="submit" value="Login">
+      <br>
     </form>
 {% endblock content %}
