--- a/pylistener/templates/register.jinja2
+++ b/pylistener/templates/register.jinja2
@@ -24,6 +24,7 @@
     <label>User's Name:</label>
     <input type="text" name="sub_user">
     <br>
-    <button class="manage_button" type="submit">Register</button>
+    <input class="manage_button" type="submit" value="Register">
+    <br>
 </form>
 {% endblock content%}
