--- a/pylistener/static/module.css
+++ b/pylistener/static/module.css
@@ -167,7 +167,7 @@ h1.manageTitle {
     margin: auto;
     position: relative;
     width: 550px;
-    height: 325px;
+    height: 100%;
     font-size: 14px;
     line-height: 24px;
     color: #009999;
@@ -183,6 +183,7 @@ h1.manageTitle {
 
 .manage_form input {
     width: 75%;
+    height: 2em;
     margin: auto;
 }
 
@@ -199,16 +200,17 @@ h1.manageTitle {
     font-size: 60px;
 }
 
-.manage_button {
+input.manage_button {
   background-color: #fff;
-  width: 375px;
+  width: 50%;
   display: block;
   border: 1px solid #999;
-  height: 25px;
+  font-size: 14px;
+  color: #009999;
+  font-weight: bold;
   -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  margin: auto;
 }
 
 .manage_button:hover {
