--- a/pylistener/static/module.css
+++ b/pylistener/static/module.css
@@ -1,5 +1,7 @@
 body {
     width: 100%;
+    background: #efefef;
+    color: #323437;
 }
 
 body p {
@@ -8,38 +10,48 @@ body p {
 
 body h1 {
     text-align: center;
+    font-size: 22px;
+    margin-bottom: 1em;
+    color: #323437;
 }
 
 nav {
-    background-color: #009999;
+    background-color: #009688;
     width: 100%;
-    height: 80px;
-    margin-bottom: 20px;
-    display: inline-block;
+    height: 62px;
+    margin-bottom: 30px;
+    display: block;
 }
 
 nav ul {
-    margin-top: 14px;
-    margin-right: 25px;
+    padding: 7px 15px;
 }
 
 nav ul li {
-    padding-left: 25px;
+    margin-right: 25px;
+    display: inline;
 }
 
-nav ul li a{
-    color: white;
+nav ul li a {
+    color: #fff;
     text-decoration: none;
+    display: inline-block;
 }
 
-nav ul li a:hover{
+nav ul li a:hover {
     text-decoration: underline;
 }
 
 nav ul li h1 {
     float: right;
-    color: white;
-    font-size: 40px;
+    color: #fff;
+    font-size: 32px;
+    margin: 5px 0 0;
+}
+
+hr {
+    border: 1px solid #ccc;
+    margin: 2em 0;
 }
 
 .manage_icon {
@@ -49,50 +61,48 @@ nav ul li h1 {
 
 .main_container {
     text-align: center;
-    }
+}
 
 .main_container ul {
-    display: inline-block;
     margin: auto;
     padding: 0;
-/*     For IE, the outcast
-*/  zoom:1;
-    display: inline;
-    }
-
+    /* For IE, the outcast */
+    zoom: 1;
+    display: block;
+}
 
 .list_item {
     display: inline-block;
     width: 240px;
     height: 240px;
-    padding: 20px;
-    background-color: #97D0A7;
-    border-radius: 10px;
+    border-radius: 2px;
     margin-top: 5px;
     margin-right: 5px;
     margin-left: 5px;
-    line-height: 60px;
+    line-height: 2em;
 }
 
-.list_item img{
+.list_item img {
     display: block;
-    max-height: 200px;
-    max-width: 200px;
+    max-height: 170px;
     width: auto;
-    height: auto;
-    vertical-align: bottom;
     margin: auto;
 }
 
 .list_item p {
     text-align: center;
-    color: black;
+    color: #009688;
+    text-transform: uppercase;
 }
 
 .list_item a {
     text-decoration: none;
-    height: 100%;
+    width: 200px;
+    height: 200px;
+    padding: 15px;
     vertical-align: bottom;
+    background: #fff;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 2px 1px -1px rgba(0, 0, 0, .12);
 }
 
 .link_item {
@@ -100,40 +110,40 @@ nav ul li h1 {
 }
 
 .del_contact a:link {
-    color: black;
+    color: 323437;
 }
 
 h2 {
-  text-align: center;
+    text-align: center;
 }
 
 .display_main {
     text-align: center;
     font-size: 3em;
-    margin-top: 7%;
+}
+
+.display_main h1 {
+  margin-top: 60px;
+  font-size: 50px;
 }
 
 .display_main form {
-    margin-top: 3%;
-    text-decoration: none; 
-    font: menu; 
-    display: inline-block; 
-    padding: 2px 8px;
+    text-decoration: none;
+    margin: 15px 30px;
+    display: inline-block;
 }
 
 .display_main button {
-  border: 1px solid #777777;
-  background: #009999;
-  color: white;
-  font: bold;
-  font-family: 'Ramabhadra', sans-serif;
-  padding: .5e 2em .5em 2em;
-  margin: 2em 4em 2em 4em;
-  width: 200px;
-  font-size: 25px;
-  cursor: pointer;
-  -moz-border-radius: 15px;
-  -webkit-border-radius: 15px;
+    border: none;
+    background: #009688;
+    color: #fff;
+    font-family: 'Ramabhadra', sans-serif;
+    width: 200px;
+    font-size: 22px;
+    cursor: pointer;
+    border-radius: 2px;
+    padding: 5px;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 2px 1px -1px rgba(0, 0, 0, .12);
 }
 
 .display_main i {
@@ -142,121 +152,117 @@ h2 {
 }
 
 .display_main a {
-    color: #009999;
+    color: #009688;
     font-weight: bold;
     text-decoration: none;
 }
 
 .display_main a:visited {
-    color: #009999;
+    color: #009688;
     text-decoration: none;
 }
 
 .display_refresh i {
-    font-size: 100px;
+    font-size: 60px;
+    margin-top: 40px;
 }
 
 h1.manageTitle {
-    font-size: 50px;
+    font-size: 32px;
+    margin: 0;
 }
 
 .manage_form {
-    background: -webkit-linear-gradient(bottom, #97D0A7, #FFFFFF 500px);
-    background: -moz-linear-gradient(bottom, #97D0A7, #FFFFFF 500px);
-    background: linear-gradient(bottom, #97D0A7, #FFFFFF 500px);
+    background: #fff;
     margin: auto;
     position: relative;
-    width: 550px;
+    width: 100%;
+    max-width: 480px;
     height: 100%;
-    font-size: 14px;
-    line-height: 24px;
-    color: #009999;
+    font-size: 16px;
+    line-height: 1.4;
+    color: #666;
     text-decoration: none;
-    border-radius: 10px;
-    padding: 10px;
-    border: 1px solid #999;
-    border: inset 1px solid #333;
-    -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-    -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+    padding: 15px;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 2px 1px -1px rgba(0, 0, 0, .12);
 }
 
 .manage_form input {
     width: 75%;
     height: 2em;
+    font-size: 16px;
     margin: auto;
 }
 
-.manage_form select{
-    margin-left: 30px;
+.manage_form select {
+    margin-left: 12%;
     width: 40%;
 }
 
 .manage_form label {
-    margin-left: 12.5%;
+    margin-left: 12%;
+    margin-bottom: 0.5em;
+    display: block;
+    font-weight: normal;
+    margin-top: 1em;
 }
 
-.manage_form_title h1{
-    font-size: 60px;
+.manage_form_title h1 {
+    font-size: 24px;
 }
 
 input.manage_button {
-  background-color: #fff;
-  width: 50%;
-  display: block;
-  border: 1px solid #999;
-  font-size: 14px;
-  color: #009999;
-  font-weight: bold;
-  -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+    background-color: #009688;
+    width: 50%;
+    display: block;
+    border-radius: 2px;
+    text-transform: uppercase;
+    letter-spacing: 0.025em;
+    border: none;
+    font-size: 16px;
+    color: #fff;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .26);
+    cursor: pointer;
 }
 
 .manage_button:hover {
-  background: #009999;
-  color: #fff;
+    background: #00aaaa;
+    color: #fff;
 }
 
 .manage_list_item {
     display: inline-block;
-    width: 110px;
-    padding: 20px;
-    background-color: #97D0A7;
-    border-radius: 10px;
-    margin-top: 5px;
-    margin-right: 5px;
-    margin-left: 5px;
+    width: 200px;
+    height: 200px;
+    background-color: #fff;
+    border-radius: 2px;
+    margin: 15px;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 2px 1px -1px rgba(0, 0, 0, .12);
 }
 
 .manage_list_item p {
     text-align: center;
-    color: black;
+    margin: 0.5em 0;
+    text-transform: uppercase;
 }
-
-/*.del_contact a {
-    text-decoration: none;
-    height: 100%;
-    vertical-align: bottom;
-    color: black;
-}
-*/
-/*.del_contact a:hover {
-    color: red;
-}*/
 
 .manage_link_item {
-    display: inline-block;
+    padding: 15px;
+    width: 170px;
+    height: 170px;
 }
 
-.manage_link_item img{
-    max-height: 100px;
-    vertical-align: bottom;
+.manage_link_item img {
+    max-height: 115px;
+    width: auto;
 }
 
 .manage_link_item a:link {
     text-decoration: none;
-    color: black;
+    color: #999;
+    display: block;
+    margin: 1em 0 0;
+    font-size: 14px;
 }
 
 .manage_link_item a:hover {
@@ -264,50 +270,52 @@ input.manage_button {
     color: red;
 }
 
-.login_form: {
-    background: -webkit-linear-gradient(bottom, #97D0A7, #FFFFFF 35px);
-    background: -moz-linear-gradient(bottom, #97D0A7, #FFFFFF 35px);
-    background: linear-gradient(bottom, #97D0A7, #FFFFFF 35px);
-    color: #009999;
+.login_form {
+    background: #fff;
+    color: #009688;
     width: 75%;
     margin: auto;
     border: 1px solid #999;
     border-radius: 5px;
 }
 
-
 .small_list_item {
     display: inline-block;
     width: 120px;
-    height: 80px;
+    height: 95px;
     padding: 10px;
-    background-color: #97D0A7;
-    border-radius: 6px;
+    border-radius: 2px;
+    background: #fff;
     margin-top: 5px;
     margin-right: 5px;
     margin-left: 5px;
     line-height: 20px;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 2px 1px -1px rgba(0, 0, 0, .12);
 }
 
-.small_list_item img{
+.small_list_item img {
     display: block;
     max-height: 60px;
     width: auto;
     height: auto;
-    vertical-align: bottom;
     margin: auto;
 }
 
 .small_list_item p {
     text-align: center;
-    color: black;
+    color: 323437;
 }
 
 .small_list_item a {
     text-decoration: none;
-    color: black;
+    color: #323437;
     height: 100%;
     vertical-align: bottom;
+}
+
+.small_list_item a span {
+    display: inline-block;
+    margin-bottom: 0.5em;
 }
 
 .small_link_item {
